--- a/TRx.Program.Chart/MainWindow.xaml
+++ b/TRx.Program.Chart/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"     
         xmlns:sparrow="http://sparrowtoolkit.codeplex.com/wpf"
-        xmlns:Charting="clr-namespace:TRL.Charting;assembly=TRL.Charting" 
+        xmlns:ChartingLvc="clr-namespace:TRx.Charting;assembly=TRx.Charting"
+        xmlns:Charting="clr-namespace:TRL.Charting;assembly=TRL.Charting"     
         x:Class="TRx.Program.Client.MainWindow"
         x:Name="TradeClient" 
         mc:Ignorable="d"
@@ -100,22 +101,7 @@
             </TabItem>
             <TabItem Header="График4" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top">
                 <Grid Background="#FFE5E5E5">
-                    <sparrow:SparrowChart>
-                        <sparrow:SparrowChart.XAxis>
-                            <sparrow:LinearXAxis/>
-                        </sparrow:SparrowChart.XAxis>
-                        <sparrow:SparrowChart.YAxis>
-                            <sparrow:LinearYAxis/>
-                        </sparrow:SparrowChart.YAxis>
-                        <sparrow:LineSeries>
-                            <sparrow:LineSeries.Points>
-                                <sparrow:DoublePoint Data="0" Value="1"/>
-                                <sparrow:DoublePoint Data="1" Value="2"/>
-                                <sparrow:DoublePoint Data="2" Value="3"/>
-                                <sparrow:DoublePoint Data="3" Value="4"/>
-                            </sparrow:LineSeries.Points>
-                        </sparrow:LineSeries>
-                    </sparrow:SparrowChart>
+                    <ChartingLvc:FinancialExample Margin="0,0,0,0" x:Name="lvChart"/>
                 </Grid>
             </TabItem>
             <TabItem Header="График5" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top">
